--- a/React-TypeScript-project1/Readme
+++ b/React-TypeScript-project1/Readme
@@ -1,2 +1,3 @@
-#A simple Hangman Game Created using React Typescript 
+#A simple Hangman Game Created using React Typescript.
+
 It is a yet simple and interactive project which do serves as a good start for your Journey with React - Typescript 
