--- a/React-TypeScript-project1/Readme
+++ b/React-TypeScript-project1/Readme
@@ -1,3 +1,7 @@
 #A simple Hangman Game Created using React Typescript.
 
 It is a yet simple and interactive project which do serves as a good start for your Journey with React - Typescript 
+
+The project was developed on mobile with the Replit IDE.
+
+Do try it and ping me on LinkedIn: Viswajith S
